--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=backend
+
+# Database
+spring.datasource.url=jdbc:mysql://localhost:3304/backend
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# Create table
+spring.jpa.hibernate.ddl-auto=update
+
+# E-mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=aa
+spring.mail.password=aa
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
