--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "front": "file:",
     "i18next": "^23.15.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "primeflex": "^3.3.1",
