--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,17 +1,23 @@
 spring.application.name=backend
+spring.messages.basename=messages
+spring.config.import=classpath:application-secrets.properties
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3304/backend
+spring.datasource.url=jdbc:mysql://localhost:3306/backend
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # Create table
 spring.jpa.hibernate.ddl-auto=update
 
 # E-mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=aa
-spring.mail.password=aa
+spring.mail.username=rafaelsanches.s35@gmail.com
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Security
+jwt.secret=secretasdasdasdasdasdasdasdasdasdasdsdaasdasd
+jwt.expiration=86400000
